--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -6,9 +6,13 @@ spring:
     password: ${MYSQL_DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+#Kakao, Google
 oauth:
   kakao:
     client-id: ${KAKAO_CLIENT_ID}
+  google:
+    client-id: ${GOOGLE_CLIENT_ID}
+    client-secret: ${GOOGLE_CLIENT_SECRET}
 
 jwt:
   secret: ${JWT_SECRET_KEY}
